# POLARIS-CLI

./: .gitignore  LICENSE  README.md  polaris.bat  pyproject.toml
src/polaris_cli/: __main__.py  agent.py  cli.py  client.py  config.py  router.py  ui.py
src/polaris_cli/tools/: base.py  filesystem.py  registry.py  search.py  system.py
