[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polaris-agent"
version = "0.1.0"
description = "A highly polished, autonomous CLI-based LLM agent powered by Groq."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "akmalriyas", email = "akmalriyas@gmail.com" }
]
keywords = ["groq", "ai", "agent", "cli", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "groq>=0.10.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
polaris-cli = "polaris_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_cli"]

[tool.hatch.metadata]
allow-direct-references = true
